--- a/locale/pt.txt
+++ b/locale/pt.txt
@@ -39,6 +39,8 @@ Image_5125BBDF_5DC2_CE6A_41D2_E3A066E517AE_mobile.url = skin/Image_5125BBDF_5DC2
 Image_5125BBDF_5DC2_CE6A_41D2_E3A066E517AE.url = skin/Image_5125BBDF_5DC2_CE6A_41D2_E3A066E517AE_pt.png
 Image_512EE4A4_5DC3_5ADE_41D3_C83D2A2A5424_mobile.url = skin/Image_512EE4A4_5DC3_5ADE_41D3_C83D2A2A5424_mobile_pt.png
 Image_512EE4A4_5DC3_5ADE_41D3_C83D2A2A5424.url = skin/Image_512EE4A4_5DC3_5ADE_41D3_C83D2A2A5424_pt.png
+Image_641E39C2_6910_9007_41B8_018CBF97362B.url = skin/Image_641E39C2_6910_9007_41B8_018CBF97362B_pt.jpeg
+Image_65A5C354_6910_B003_41D1_D1806B30F91F.url = skin/Image_65A5C354_6910_B003_41D1_D1806B30F91F_pt.jpeg
 
 ## Tour
 
