--- a/locale/pt.txt
+++ b/locale/pt.txt
@@ -3,18 +3,19 @@
 ## Action
 
 ### URL
-LinkBehaviour_648814D8_695D_02AF_41D5_D6276A1B9AA5.source = https://api.whatsapp.com/send?phone=5527997562040&text=Ol%C3%A1!!%20Seja%20bem%20vindo%20ao%20restaurante%20O%20Pereira.
 LinkBehaviour_46F58E58_5E45_4675_41C4_412E2D1131F3.source = https://api.whatsapp.com/send?phone=5527997562040&text=Ol%C3%A1!!%20Seja%20bem%20vindo%20ao%20restaurante%20O%20Pereira.
-LinkBehaviour_47A2A30A_5E4D_5FEA_41A2_77BAA6F46704.source = https://maps.google.com/?cid=5713581330344278673
+LinkBehaviour_648814D8_695D_02AF_41D5_D6276A1B9AA5.source = https://api.whatsapp.com/send?phone=5527997562040&text=Ol%C3%A1!!%20Seja%20bem%20vindo%20ao%20restaurante%20O%20Pereira.
 LinkBehaviour_65A6B6AF_695D_0EE0_41C8_B1AA6DFA0063.source = https://maps.google.com/?cid=5713581330344278673
-LinkBehaviour_6456D1A0_695D_02E0_4169_B779B0D38510.source = https://www.instagram.com/opereira.oficial/
+LinkBehaviour_47A2A30A_5E4D_5FEA_41A2_77BAA6F46704.source = https://maps.google.com/?cid=5713581330344278673
 LinkBehaviour_453F6C8F_5E4F_CAEB_41CF_DA090C1D2B3A.source = https://www.instagram.com/opereira.oficial/
+LinkBehaviour_6456D1A0_695D_02E0_4169_B779B0D38510.source = https://www.instagram.com/opereira.oficial/
 
 ## Media
 
 ### Audio
 audiores_44AADFC5_5E42_C65F_41C5_317A034C937F.mp3Url = media/audio_447851C8_5DCD_3A56_41CE_1FB01F750C9B_pt.mp3
 audiores_44B87831_5E42_CA36_41B4_6A1F149ACA35.mp3Url = media/audio_46FA663B_5E4D_462B_41C0_E1BB1AF9C574_pt.mp3
+audiores_8FD95AAD_8091_C2F8_41C1_AD4346DB2B08.mp3Url = media/audio_8E690190_8090_3EA8_4188_D8B2B36ABF24_pt.mp3
 
 ### Title
 panorama_5CC46B55_52A4_B404_41BF_11A71810FB65.label = BEIRA DO RIO 1
